--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -14,8 +14,6 @@
 }
 
 .content {
-  color: #555;
-
   max-width: 776px;
 
   margin: 0 auto;
@@ -28,4 +26,31 @@
 
 .content p {
   margin: 20px 0;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  max-width: 1064px;
+
+  margin: 0 auto;
+  padding: 24px 20px;
+}
+
+.footer a {
+  padding: 1rem 2rem;
+
+  color: #996dff;
+  text-decoration: none;
+
+  background: #202024;
+  border-radius: 5px;
+
+  transition: 0.2s;
+}
+
+.footer a:hover {
+  filter: brightness(1.2);
 }
