--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -20,12 +20,18 @@
   padding: 24px 20px;
 }
 
-.content h2 {
+.content h1 {
   margin-bottom: 20px;
+  font-size: 1.5rem;
+}
+
+.content h2 {
+  font-size: 1.125rem;
 }
 
 .content p {
   margin: 20px 0;
+  font-size: 1rem;
 }
 
 .footer {
