--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -45,18 +45,31 @@
   padding: 24px 20px;
 }
 
-.footer a {
+.footer button {
   padding: 1rem 2rem;
 
   color: #996dff;
   text-decoration: none;
+  font-size: 1rem;
 
   background: #202024;
   border-radius: 5px;
 
+  cursor: pointer;
   transition: 0.2s;
 }
 
-.footer a:hover {
+.footer button:hover {
   filter: brightness(1.2);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 120px;
+  border-radius: 5px;
+  color: #333;
 }
